# prime-juggling-patterns

./: .gitignore  README.md  base.py  colored.py  data.json  main.py  multiplex.py  normal.py  passing.py  pyproject.toml  test.py  tools.py
fast-ct/: main.aux  main.tex
oeis/: oeis.py
src/: __init__.py  base.py  colored.py  ct.py  multiplex.py  normal.py  passing.py  tools.py
